# formalang

./: .cspell.json  .gitignore  .markdownlintignore  .ttr.toml  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  book.toml  clippy.toml  formalang.md  stdlib-ref.md  stdlib.fv  test_minimal.fv  test_modal_only.fv  test_self_only.fv  test_simple_self.fv
.cargo/: config.toml
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: api-check.md  audit.md  debug.md  gitflow.md  implement.md  knowledge.md  perf.md  quality.md  research.md  test-debug.md  test.md
.claude/commands/: api.md  docs.md  feature.md  fix.md  pr.md  refactor.md  research.md
.claude/workflows/: common-rules.md  feature-flow.md
.github/workflows/: ci.yml  pages.yml  shader-tests.yml
docs/: README.md  SUMMARY.md  stdlib-testing.md  wgsl-imported-impls.md
docs/developer/: architecture.md  ast.md  ir-gaps.md  ir.md  numeric_literal_precision.md  resolve_references_pass.md
docs/developer/architecture/: api.md  design.md  passes.md  pipeline.md  plugins.md
docs/developer/ast/: examples.md  expressions.md  files.md  functions.md  generics.md  imports.md  overview.md  patterns.md  type-definitions.md  types.md
docs/developer/ir/: blocks.md  codegen.md  definitions.md  examples.md  expressions.md  functions.md  ids.md  module.md  obtaining.md  overview.md  rationale.md  types.md  visitor.md
docs/shader-snapshots/: shader-snapshots-manifest.toml  shader-snapshots-spec.md  shader-support-review.md
docs/stdlib-testing/: shader-support-review.md  stdlib-testing-manifest.toml  stdlib-testing-spec.md  stdlib-testing-tests.md
docs/user/: checklist.md  closures.md  control-flow.md  core.md  enums.md  example.fv  expressions.md  extern.md  formalang.md  functions.md  generics.md  modules.md  serde.md  stdlib.fv  stdlib.fvc  structs.md  traits.md  types.md
docs/user/stdlib/: alignment.fv  animation.fv  contour.fv  controls.fv  dimension.fv  effects.fv  fill.fv  gpu.fv  layout.fv  modifiers.fv  shapes.fv  traits.fv
formalens/: README.md
formalens/grammar/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
formalens/grammar/queries/: folds.scm  highlights.scm
formalens/semantic/: Cargo.toml
formalens/semantic/src/: chunker.rs  embeddings.rs  indexer.rs  lib.rs  main.rs  search.rs
plans/: bring-semantic-analyzer-up-to-date.md  gpu-shader-compilation.md  ir-design.md  sync-with-docs.md
scripts/: check_file_sizes.sh  oversized_allowlist.txt
src/: error.rs  lib.rs  location.rs  pipeline.rs  reporting.rs
src/ast/: definitions.rs  expressions.rs  mod.rs  numbers.rs  tests.rs  types.rs
src/builtins/: mod.rs
src/codegen/: dispatch.rs  flatten.rs  fvc.rs  mod.rs  monomorph.rs  sourcemap.rs  transpile.rs  wgsl.rs
src/ir/: block.rs  closure_conv.rs  dce.rs  expr.rs  fold.rs  ids.rs  imports.rs  lower.rs  mod.rs  module.rs  monomorphise.rs  resolve_refs.rs  resolved_type.rs  types.rs  visitor.rs
src/ir/closure_conv/: capture_rewrite.rs  env_synthesis.rs  lifting.rs  mod.rs  state.rs  tests.rs
src/ir/dce/: expr.rs  filtering.rs  mod.rs  reachability.rs  remap.rs  tests.rs
src/ir/expr/: accessors.rs  mod.rs
src/ir/fold/: mod.rs  ops.rs  tests.rs
src/ir/lower/: definitions.rs  destructuring.rs  expr.rs  let_and_module.rs  mod.rs  register.rs  tests.rs  types.rs
src/ir/monomorphise/: collect.rs  compact.rs  expr_walk.rs  external.rs  functions.rs  leftover.rs  mod.rs  rewrite.rs  specialise.rs  walkers.rs
src/ir/resolve_refs/: expr.rs  lookups.rs  mod.rs  symbols.rs  walkers.rs
src/lexer/: indentation.rs  mod.rs  token.rs
src/lexer/token/: callbacks.rs  mod.rs
src/parser/: defs.rs  exprs.rs  mod.rs  span.rs  tests.rs  types.rs
src/parser/defs/: enums.rs  extern_decls.rs  funcs.rs  mod.rs
src/parser/exprs/: literals.rs  mod.rs  (+2 more)
src/reporting/: errors.rs  errors_advanced.rs  internal_codes.rs  mod.rs
src/semantic/: circular.rs  helpers.rs  import_graph.rs  imports.rs  inference.rs  mod.rs  module_collect.rs  module_resolver.rs  node_finder.rs  pass1_symbols.rs  pattern_types.rs  position.rs  queries.rs  sem_type.rs  symbol_table.rs  tests.rs  trait_check.rs  type_graph.rs  type_resolution.rs  validation.rs
stdlib/: animation.fv  color.fv  content.fv  contour.fv  effects.fv  fill.fv  layout.fv  terminal.fv
tests/: closure_conv.rs  complete_fv_no_error_types.rs  coverage_gaps.rs  destructuring.rs  destructuring_closure_annotations.rs  error_paths.rs  indentation.rs  integration.rs  ir.rs  lexer_correctness.rs  lsp.rs  module_resolution.rs  numeric_literal_precision.rs  parser_edge_cases.rs  reporting.rs  resolve_refs.rs  semantic.rs  semantic_analysis.rs  semantic_edge_cases.rs  semantic_validation.rs  shader_snapshots.rs  snapshots.rs  test_ast_and_token_helpers.rs  test_dce_visitor.rs  test_error_variants.rs  test_extern.rs  test_functional_semantic.rs  test_gaps.rs  test_impl_trait.rs  test_ir_fold2.rs  test_ir_lower2.rs  test_ir_lower3.rs  test_ir_lower_modules.rs  test_no_ui.rs  test_node_finder.rs  test_node_finder2.rs  test_overloading.rs  test_param_conventions.rs  test_pipeline.rs  test_position_coverage.rs  (+8 more)
tests/common/: mod.rs
tests/fixtures/: complete.fv
tests/snapshots/: closure_conv__mc3_capture_env_structs.snap  closure_conv__mc4_lifted_functions.snap  closure_conv__mc5_let_shadowing.snap  closure_conv__mc5_lifted_bodies.snap  closure_conv__mc6_site_rewrites.snap  closure_conv__mc9_env_field_conventions.snap  closure_conv__nested_closure_lift.snap  snapshots__ast_closure_with_mut_and_sink.snap  snapshots__ast_enum_and_match.snap  snapshots__ast_generic_struct_with_impl.snap  snapshots__ast_if_and_match_exprs.snap  snapshots__ast_module_with_path_access.snap  snapshots__ast_struct_and_impl.snap  snapshots__ast_trait_and_impl.snap  snapshots__ir_enum_and_match.snap  snapshots__ir_struct_and_impl.snap  snapshots__ir_trait_and_impl.snap
theme/: custom.css  formalang-hljs.js
theme/css/: variables.css
website/: CNAME  index.html  input.css  tailwind.config.js
(+70 files in other folders)
