[package]
name = "formalang"
version = "0.1.0"
edition = "2021"
authors = ["formavera team"]
description = "FormaLang compiler frontend: lexer, parser, semantic analyzer, and IR lowering."
license = "MIT OR Apache-2.0"
repository = "https://github.com/valentinradu/formalang"
readme = "README.md"
keywords = ["compiler", "language", "frontend", "ir", "plugin"]
categories = ["compilers", "parser-implementations"]

[[bin]]
name = "fvc"
path = "src/bin/fvc.rs"

[dependencies]
# Lexer
logos = "0.14"

# Parser
chumsky = { version = "1.0.0-alpha.7", features = ["pratt"] }

# Error handling
thiserror = "1.0"
ariadne = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rstest = "0.23"
pretty_assertions = "1.4"
tempfile = "3.8"
insta = "1.47.2"

[lints.rust]
unreachable_pub               = "deny"
unsafe_code                   = "forbid"
unused_must_use               = "deny"
missing_debug_implementations = "warn"
dead_code                     = "warn"

[lints.clippy]
# Lint groups (individual overrides below take priority)
all      = { level = "deny",  priority = -1 }
pedantic = { level = "warn",  priority = -1 }
nursery  = { level = "warn",  priority = -1 }

# Error handling — no silent failures, ever
unwrap_used      = "deny"
expect_used      = "deny"
unwrap_in_result = "deny"
panic            = "deny"
todo             = "deny"
unimplemented    = "deny"
unreachable      = "deny"
exit             = "deny"

# Observability — no print macros
print_stdout = "deny"
print_stderr = "deny"
dbg_macro    = "deny"

# Suppression — #[allow] is forbidden; use #[expect(reason = "...")]
allow_attributes = "deny"

# Async discipline
await_holding_lock        = "deny"
await_holding_refcell_ref = "deny"

# Test discipline
panic_in_result_fn = "deny"

# Match exhaustiveness
wildcard_enum_match_arm = "deny"

# Arithmetic safety
arithmetic_side_effects  = "deny"
integer_division         = "deny"
modulo_arithmetic        = "deny"

# Numeric cast safety
cast_possible_truncation = "deny"
cast_possible_wrap       = "deny"
cast_sign_loss           = "deny"
cast_precision_loss      = "deny"

# Index safety
indexing_slicing = "warn"

# Code quality
fallible_impl_from  = "warn"
error_impl_error    = "warn"
format_push_string  = "warn"
clone_on_ref_ptr    = "warn"

# API hygiene
exhaustive_structs = "warn"
exhaustive_enums   = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"

# Pedantic false-positive overrides
module_name_repetitions = "allow"
redundant_pub_crate     = "allow"

[lints.rustdoc]
broken_intra_doc_links   = "deny"
missing_crate_level_docs = "warn"
