[package]
name = "formalang"
version = "0.2.0"
edition = "2021"
# Audit2 B33: pin a minimum supported Rust version so downstream
# users can detect toolchain incompatibility before a noisy build
# failure. Updated alongside any change that requires a newer rustc
# feature; verified with `cargo +<rust-version> check`.
rust-version = "1.85"
authors = ["formavera team"]
description = "FormaLang compiler frontend: lexer, parser, semantic analyzer, and IR lowering."
license = "MIT OR Apache-2.0"
repository = "https://github.com/valentinradu/formalang"
readme = "README.md"
keywords = ["compiler", "language", "frontend", "ir", "plugin"]
categories = ["compilers", "parser-implementations"]

[[bin]]
name = "fvc"
path = "src/bin/fvc.rs"

[dependencies]
# Lexer
#
# Pinned at 0.14: 0.16 is functionally fine but its codegen for large
# token enums makes CI runners (2-core, shared) time out during the
# formalang crate compile. Tracked as a separate bench/tune task.
logos = "0.14"

# Parser (pinned on 1.0-alpha track; upstream 1.0 is still pre-release)
chumsky = { version = "1.0.0-alpha.7", features = ["pratt"] }

# Error handling
thiserror = "2.0"
# Pinned at 0.4: upgrading to 0.5/0.6 requires rewriting every Report::build
# call site (API moved from (kind, filename, offset) to (kind, (filename, range))).
# Tracked as a separate migration.
ariadne = "0.4"
# yansi is a transitive dependency of ariadne; pinning here lets the
# reporter call `yansi::disable()` to honour `NO_COLOR` for inline
# `Fmt::fg(...)` highlights inside label messages (audit2 B35). Match
# ariadne's pinned version to avoid double-rcs.
yansi = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# SIGINT handling for `fvc watch` — lets the watch loop break cleanly on
# Ctrl+C and propagate the last check's exit code (audit finding #33).
ctrlc = "3"

[dev-dependencies]
# serde_json is only used by serde-stability integration tests; keep it
# out of the library's runtime dependency surface. Audit finding #46.
serde_json = "1.0"
rstest = "0.26"
pretty_assertions = "1.4"
tempfile = "3.23"
insta = "1.47.2"

# Trim debug symbols on `cargo test` builds. The default
# `debug = "full"` produces huge .rlib files (~hundreds of MB across
# all the test binaries) which fills the small disk on
# `ubuntu-latest` CI runners and surfaces as either "No space left on
# device" during link or as an lld bus error.
# `line-tables-only` keeps backtraces useful but drops type info we
# don't need for tests.
[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"

[lints.rust]
unreachable_pub               = "deny"
unsafe_code                   = "forbid"
unused_must_use               = "deny"
missing_debug_implementations = "warn"
dead_code                     = "warn"

[lints.clippy]
# Lint groups (individual overrides below take priority)
all      = { level = "deny",  priority = -1 }
pedantic = { level = "warn",  priority = -1 }
nursery  = { level = "warn",  priority = -1 }

# Error handling — no silent failures, ever
unwrap_used      = "deny"
expect_used      = "deny"
unwrap_in_result = "deny"
panic            = "deny"
todo             = "deny"
unimplemented    = "deny"
unreachable      = "deny"
exit             = "deny"

# Observability — no print macros
print_stdout = "deny"
print_stderr = "deny"
dbg_macro    = "deny"

# Suppression — #[allow] is forbidden; use #[expect(reason = "...")]
allow_attributes = "deny"

# Async discipline
await_holding_lock        = "deny"
await_holding_refcell_ref = "deny"

# Test discipline
panic_in_result_fn = "deny"

# Match exhaustiveness
wildcard_enum_match_arm = "deny"

# Arithmetic safety
arithmetic_side_effects  = "deny"
integer_division         = "deny"
modulo_arithmetic        = "deny"

# Numeric cast safety
cast_possible_truncation = "deny"
cast_possible_wrap       = "deny"
cast_sign_loss           = "deny"
cast_precision_loss      = "deny"

# Index safety
indexing_slicing = "warn"

# Code quality
fallible_impl_from  = "warn"
error_impl_error    = "warn"
format_push_string  = "warn"
clone_on_ref_ptr    = "warn"

# API hygiene
exhaustive_structs = "warn"
exhaustive_enums   = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"

# Pedantic false-positive overrides
module_name_repetitions = "allow"
redundant_pub_crate     = "allow"

[lints.rustdoc]
broken_intra_doc_links   = "deny"
missing_crate_level_docs = "warn"
