[package]
name = "formalens-semantic"
version = "0.1.0"
edition = "2021"
description = "Semantic search for FormaLang codebase using LanceDB and embeddings"
license = "MIT"

[dependencies]
# Vector database (use latest stable)
lancedb = "0.15"

# Embeddings
fastembed = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# File handling
walkdir = "2"
glob = "0.3"
dirs = "5"

# Error handling
anyhow = "1"
thiserror = "1"

# Arrow for LanceDB
arrow-array = "53"
arrow-schema = "53"

[[bin]]
name = "formalens"
path = "src/main.rs"
